[package]
name = "protobuf_message_factory"
version = "0.1.2"
description = "generate a message factory to create message by message name"
authors = ["egmkang wang <egmkang@outlook.com>"]
edition = "2018"
license = "MIT"

readme = "README.md"


repository = "https://github.com/egmkang/protobuf_message_factory"
homepage = "https://github.com/egmkang/protobuf_message_factory"
document = "https://docs.rs/protobuf_message_factory"

[dependencies]
glob = "0.3.0"
regex = "1.3.1"